# app/Http/Controllers/ProjectController.php
@@ -133,10 +133,6 @@ class ProjectController extends Controller
 
 	}
 
-
-
-
-
 	/**
 	 * @OA\Post(
 	 *     path="/api/get-projects",
@@ -236,6 +232,42 @@ class ProjectController extends Controller
 			return response()->json(['error_code'=>2,'msg'=>'Course Id is Compulsory']);
 		}
 
+	}
+
+	/**
+   * @OA\Post(
+   *     path="/api/get-suggested-projects",
+   *     tags={"Projects"},
+   *     description="Get all projects suggested for a particular user",
+   *     @OA\Parameter(
+   *          name="token",
+   *          in="query",
+   *          description="token",
+   *          required=true,
+   *          @OA\Schema(
+   *              type="string"
+   *          )
+   *      ),
+   *     @OA\Response(
+   *          response=200,
+   *      description="{[error_code=>0,msg=>'success']}"
+   *     )
+   * )
+   */
+	public function wsGetAllSuggestedProjects(Request $request){
+	  $user=JWTAuth::user();
+      if(!is_null($user->preferences)){
+        $preferences=explode(',', $user->preferences);
+        $course_id=$preferences['0'];
+        if(is_null(Course::find($course_id))){
+          $course_id=1;
+        }
+      }
+      else{
+        $course_id=1;
+      }
+      $project=Project::where('course_id',$course_id)->take(5)->get();
+      return response()->json(['success'=>true,'course_id'=>$course_id,'projects'=>$project]);
 	}
 }
 //end of class
